# reservation-cinema-hall

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Origine.c  README.it.md  README.md  ccpp.yml  reservation-cinema-hall.sln  savefile.c  savefile.h  server.c  sonar-project.properties  wndclient.c  wndclient.h
.github/workflows/: build.yml  ccpp.yml  codeql-analysis.yml
UNIX/: Makefile
UNIX/src/: cinemactl.c  cinemad.c  daemon.c
WINDOWS/include/: targetver.h  wndclient.h
WINDOWS/src/: Origine.c  savefile.c  wndclient.c
cinema-client/: CMakeLists.txt  Origine.c  booking.c  booking.h  cinema-client.c  cinema-client.h  cinema-client.rc  cinema-client.vcxproj  cinema-client.vcxproj.filters  resource.h  savefile.c  savefile.h
cinema-server/: CMakeLists.txt
cinema-server/cinemactl/: CMakeLists.txt  cinemactl.c
cinema-server/cinemad/: CMakeLists.txt  cinemad.c  database.c  database.h  index_table.c  index_table.h  storage.c  try.h  utils.c  utils.h
cinemactl/: cinemactl.c  cinemactl.vcxproj  cinemactl.vcxproj.filters
cinemad/: avl_tree.c  avl_tree.h  avl_tree_node.c  avl_tree_node.h  binary_node.c  binary_node.h  binary_search_tree.c  binary_search_tree.h  binary_tree.c  binary_tree.h  bs_node.c  bs_node.h  bst.c  bst.h  bst_node.c  bst_node.h  cinemad.c  cinemad.vcxproj  cinemad.vcxproj.filters  concurrent_flag.h  concurrent_queue.c  concurrent_queue.h  database.c  database.h  flag.c  index_record.c  index_record.h  index_table.c  index_table.h  list.c  list.h  node.h  queue.c  queue.h  resources.h  stack.c  stack.h  storage.c  storage.h  tree.h
client/: booking.c  booking.h  client.c  resource.h
include/: connection.h  database.h
lib/: .database.c.swp  CMakeLists.txt  connection.h  database.c  database.h  try.h
lib/include/: asprintf.h  connection.h  database.h  stack.h
lib/src/: asprintf.c  connection.c  database.c  queue.c  stack.c
lib/src/connection/: connection.c
lib/src/data-structure/: concurrent_flag.c  concurrent_queue.c  flag.c  queue.c  stack.c
lib/src/resources/: resources.c
libraries/: asprintf.c  asprintf.h  bool.h  connection.c  connection.h  database.c  database.h  libraries.vcxitems  libraries.vcxitems.filters  queue.c  queue.h  resources.c  stack.c  stack.h
server/: CMakeLists.txt
server/cinemactl/: cinemactl.c
server/cinemad/: cinemad.c  database.c  index_table.c  storage.h
src/: asprintf.c  connection.c  daemon.c  database.c  helper.h  server.c  try.h
tofix/: savefile.c  wndclient.h
